# ProjectSoftwareEngineering

./: .gitignore  Parser.cpp  Parser.h  README.md  Station.cpp  Station.h  Tram.cpp  Tram.h  ciaociacioao.py  main.cpp  parser.cpp  parser.h
DoxygenDocumentation/: Doxyfile
DoxygenDocumentation/html/: _albatross_tram_8cpp.html  _albatross_tram_8h.html  _albatross_tram_8h_source.html  _design_by_contract_8h.html  _design_by_contract_8h_source.html  _p_c_c_tram_8cpp.html  _p_c_c_tram_8h.html  _p_c_c_tram_8h_source.html  _simulation_object_8cpp.html  _simulation_object_8h.html  _simulation_object_8h_source.html  _station_8cpp.html  _station_8cpp.js  _station_8h.html  _station_8h.js  _station_8h_source.html  _subway_8cpp.html  _subway_8h.html  _subway_8h_source.html  _subway_simulation_domain_tests_8cpp.html  _subway_simulation_domain_tests_8cpp.js  _subway_simulation_exporter_8cpp.html  _subway_simulation_exporter_8h.html  _subway_simulation_exporter_8h.js  _subway_simulation_exporter_8h_source.html  _subway_simulation_importer_8cpp.html  _subway_simulation_importer_8cpp.js  _subway_simulation_importer_8h.html  _subway_simulation_importer_8h.js  _subway_simulation_importer_8h_source.html  _subway_simulation_input_tests_8cpp.html  _subway_simulation_input_tests_8cpp.js  _subway_simulation_main_8cpp.html  _subway_simulation_main_8cpp.js  _subway_simulation_moving_tests_8cpp.html  _subway_simulation_moving_tests_8cpp.js  _subway_simulation_output_tests_8cpp.html  _subway_simulation_output_tests_8cpp.js  _subway_simulation_output_tests_8h.html  _subway_simulation_output_tests_8h_source.html  (+187 more)
DoxygenDocumentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  (+45 more)
DoxygenDocumentation/latex/: annotated.tex  class_station.tex  class_subway.tex  class_subway_simulation_domain_tests.eps  class_subway_simulation_domain_tests.tex  class_subway_simulation_exporter.tex  class_subway_simulation_importer.tex  class_subway_simulation_input_tests.eps  class_subway_simulation_input_tests.tex  class_subway_simulation_output_tests.eps  class_subway_simulation_output_tests.tex  class_ti_xml_attribute.tex  class_ti_xml_attribute_set.tex  class_ti_xml_base.tex  class_ti_xml_comment.tex  class_ti_xml_declaration.tex  class_ti_xml_document.tex  class_ti_xml_element.tex  class_ti_xml_handle.tex  class_ti_xml_node.tex  class_ti_xml_out_stream.tex  class_ti_xml_parsing_data.tex  class_ti_xml_printer.tex  class_ti_xml_string.tex  class_ti_xml_text.tex  class_ti_xml_unknown.tex  class_ti_xml_visitor.tex  class_tram.tex  hierarchy.tex  refman.tex  struct_ti_xml_cursor.tex
SubwayGroupA/: CMakeLists.txt  Station.cpp  Station.h  Subway.cpp  Tram.cpp  Tram.h  main.cpp
SubwaySimulation/: Albatros.cpp  Albatros.h  AlbatrossTram.cpp  AlbatrossTram.h  CMakeLists.txt  Output.cpp  Output.h  PCCTram.cpp  PCCTram.h  Parser.cpp  Parser.h  SimulationObject.cpp  SimulationObject.h  Station.cpp  Station.h  Subway.cpp  Subway.h  SubwaySimulation.cbp  SubwaySimulationDomainTests.cpp  SubwaySimulationExporter.cpp  SubwaySimulationExporter.h  SubwaySimulationImporter.cpp  SubwaySimulationImporter.h  SubwaySimulationInputTests.cpp  SubwaySimulationInputTests.h  SubwaySimulationMain.cpp  SubwaySimulationMovingTests.cpp  SubwaySimulationOutputTests.cpp  SubwaySimulationOutputTests.h  SubwaySimulationTests.cpp  SubwaySimulationUtils.cpp  SubwaySimulationUtils.h  Track.cpp  Track.h  Tram.cpp  Tram.h
SubwaySimulation/testCSV/: expectedCSVOutput3.csv  expectedCSVOutput4.csv  temporaryOutput.csv
SubwaySimulation/testGraphicalOutput/: expectedOutput1.txt  expectedOutput2.txt  expectedOutput4.txt
SubwaySimulation/testInput/: empty.xml  illegalSubway1.txt  illegalSubway1.xml  illegalSubway11.txt  illegalSubway12-onhold.xml  illegalSubway13.xml  illegalSubway14.txt  illegalSubway14.xml  illegalSubway15.xml  illegalSubway16.txt  illegalSubway16.xml  illegalSubway2.xml  illegalSubway3-onhold.xml  illegalSubway3.txt  illegalSubway4-onhold.xml  illegalSubway4.xml  illegalSubway5.txt  illegalSubway7.txt  illegalSubway8-insospeso.txt  illegalSubway8.txt  illegalSubway9-onhold.xml  invalidElement.xml  invalidStation.xml  invalidStationTramStrings.xml  invalidStationWithWhitespace.xml  legalSubway1.xml  legalSubway2.xml  legalSubway3-onhold.xml  legalSubway3.xml  legalSubway4.xml  userOutput.txt  validStation.xml  validTram.xml  xmlsyntaxerror1.txt  xmlsyntaxerror2.txt  xmlsyntaxerror2.xml  xmlsyntaxerror4.xml  xmlsyntaxerror5.txt  xmlsyntaxerror5.xml
SubwaySimulation/testOutput/: expectedOutput1.txt  legalSubwayOutput1.txt  legalSubwayOutput2.txt  legalSubwayOutput3.txt  legalSubwayOutput4-old.txt  temporaryOutput.txt
SubwaySimulation/testSimulation/: expectedSimulationOutput2.txt  legalSubwayMoving1.txt  legalSubwayMoving2.txt  legalSubwayMoving3.txt  legalSubwayMoving4.txt  legalSubwaySimulation1.txt  legalSubwaySimulation2.txt  legalSubwaySimulation4.txt  temporaryOutput.txt  temporaryStats.txt
SubwaySimulation/testSimulation/normal/: legalSubwaySimulation2.txt
SubwaySimulation/testSimulation/simple/: .legalSubwaySimulation3.txt.swp  legalSubwaySimulation1.txt  legalSubwaySimulation2.txt  legalSubwaySimulation3.txt  legalSubwaySimulation4.txt
testInput/: illegalSubway10.txt  illegalSubway10.xml  illegalSubway3.xml  illegalSubway7.xml  illegalSubway9.txt  partialSubway1.txt  partialSubway2.txt  partialSubway2.xml
testOutput/: temporaryOutput.txt
testSimulation/: .temporaryOutput.txt.swp  legalSubwayMoving4.txt  legalSubwaySimulation3.txt
untitled/: CMakeLists.txt  TokenStation.cpp  TokenStation.h  TokenTram.cpp  TokenTram.h  main.cpp  parser.cpp  parser.h  tinystr.cpp  tinyxmlerror.cpp
userFiles/: myIllegalUserFile.xml  myPartialUserFile.xml
